feat: 뷰 카테고리 기능 추가 (daily, food, relationship, work, hobby, fashion, game, travel, etc)
